<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_main_menu" />

    <Button
        android:id="@+id/button_camera_read_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_camera_read_on" />

    <Button
        android:id="@+id/button_camera_read_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_camera_read_off" />
</LinearLayout>