<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/terminal_name_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/settings_text_terminal"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/terminal_name_edit"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:gravity="center"
                android:hint="@string/settings_editText_terminal"
                android:inputType="text"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/time_ping_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/settings_time_ping_text"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/time_ping_edit"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:gravity="center"
                android:hint="@string/settings_time_ping_edit"
                android:inputType="number"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/ip_camera_text_master"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/settings_ip_address_camera_master"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/ip_camera_edit_master"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/settings_ip_camera_text"
                android:textSize="16sp"
                tools:ignore="LabelFor,MissingConstraints,TextFields" />

            <TextView
                android:id="@+id/ip_camera_text_slayer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/settings_ip_address_camera_slayer"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/ip_camera_edit_slayer"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/settings_ip_camera_text"
                android:textSize="16sp"
                tools:ignore="LabelFor,MissingConstraints,TextFields" />

            <TextView
                android:id="@+id/settings_ping_service"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/settings_ping_service"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/flagPing_service"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings_button_save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>